# paralel_labs

./: filetypes.xml
ll_laba_1/: CMakeLists.txt  main.cpp
ll_laba_3/: CMakeLists.txt  main.cpp
ll_laba_5/: CMakeLists.txt  main.cpp
